<resources>
    <string name="app_name">IntentApp</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity bareng data</string>
    <string name="move_with_object">Pindah Activity bareng objek</string>
    <string name="dial_number">Dial a number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka</string>
    <string name="_13">13</string>
    <string name="_23">23</string>
    <string name="_63">63</string>
    <string name="_99">99</string>
    <string name="_1000">1000</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Dirterima</string>
    <string name="object_received">Objek Diterima</string>
    <string name="this_is_moveactivity">Ini Move Activity</string>
</resources>